// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render AddExpensePage with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $10.0
  </h1>
</div>
`;

exports[`should render AddExpensePage with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $1.0
  </h1>
</div>
`;
